# sportsml

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  Makefile  README.md  ROADMAP.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml
dagster_project/sportsml_dagster/: __init__.py
docker/: api.Dockerfile  dagster.Dockerfile  workbench.Dockerfile
docs/: TROUBLESHOOTING.md
docs/superpowers/specs/: 2026-05-22-sportsml-platform-design.md
scripts/: install_dev_paths.py  seed_synthetic_data.py  verify_demo.sh
