[project]
name = "sportsml"
version = "0.0.1"
description = "Foundry-style platform for sports analytics, NBA-first"
requires-python = ">=3.12"
readme = "README.md"
authors = [{ name = "sportsml" }]

dependencies = [
  # Core
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-dotenv>=1.0",
  # Data
  "duckdb>=1.0",
  "polars>=1.0",
  "pyarrow>=16",
  # ML
  "numpy>=1.26",
  "scipy>=1.13",
  "scikit-learn>=1.5",
  # Ingestion
  "nba-api>=1.4",
  "httpx>=0.27",
  "tenacity>=8.3",
  # Orchestration
  "dagster>=1.13.9",
  "dagster-webserver>=1.7",
  "dagster-duckdb>=0.23",
  "dagster-duckdb-polars>=0.23",
  # API
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
  "pytest-recording>=0.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "packages/core/sportsml",
  "packages/api/sportsml_api",
  "packages/sports/basketball/nba/sportsml",
  "packages/sports/basketball/ncaa/sportsml",
  "packages/sports/basketball/euroleague/sportsml",
  "packages/sports/football/nfl/sportsml",
  "packages/sports/baseball/mlb/sportsml",
  "packages/sports/hockey/nhl/sportsml",
  "dagster_project/sportsml_dagster",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["packages/core/tests", "packages/api/tests", "packages/sports"]
pythonpath = ["packages/core", "packages/api", "packages/sports/basketball/nba", "packages/sports/basketball/ncaa", "dagster_project"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.coverage.run]
branch = true
source = [
  "packages/core/sportsml",
  "packages/api/sportsml_api",
  "packages/sports",
]
omit = [
  "*/tests/*",
  "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
  "\\.venv",
  "build",
  "dist",
  "data",
]

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true
